Edited NWCs to also go on titles and decision lines. Fixed  the footer spacing and the PCL movement on phones

--- a/src/style.css
+++ b/src/style.css
@@ -3774,7 +3774,6 @@ textarea.incorrect-answer {
   align-items: flex-start;
   background-color: #01202C;
   color: #ffffff;
-  margin-top: 40px;
   padding: 25px 30px;
   border-top: 3px solid #003B4F;
 }
